# chip-8

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README_DEV.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml  pages.yml  release.yml
include/: chip8.hpp  emulator.hpp  event_handler.hpp  logger.hpp  random.hpp  web_bridge.hpp  window.hpp
src/: chip8.cpp  chip8.hpp  emulator.cpp  event_handler.cpp  main.cpp  web_bridge.cpp  window.cpp
web/: app.js  shell.html  style.css
